--- a/discord_backend/package.json
+++ b/discord_backend/package.json
@@ -16,6 +16,7 @@
     "discord-api-types": "^0.38.18",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
 }
